@@ -3,6 +3,7 @@ package org.example.modul223backend.Tag;
 import org.example.modul223backend.Tag.TagDTO;
 import org.example.modul223backend.Tag.Tag;
 import org.example.modul223backend.Tag.TagRepository;
+import org.example.modul223backend.exception.ErrorMessages;
 import org.example.modul223backend.util.Mapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -31,20 +32,20 @@ public class TagServiceImpl implements TagService {
     @Override
     public List<TagDTO> getAllTags() {
         List<Tag> tags = tagRepository.findAll();
-        return tags.stream().map(Mapper::mapToTagDTO).collect(Collectors.toList());
+        return tags.stream().map(Mapper::mapToTagDTO).toList();
     }
 
     @Override
     public TagDTO getTagById(Long id) {
         Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tag not found"));
+                .orElseThrow(() -> new RuntimeException(ErrorMessages.TAG_NOT_FOUND));
         return Mapper.mapToTagDTO(tag);
     }
 
     @Override
     public TagDTO updateTag(Long id, TagDTO tagDTO) {
         Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tag not found"));
+                .orElseThrow(() -> new RuntimeException(ErrorMessages.TAG_NOT_FOUND));
 
         tag.setTagName(tagDTO.getTagName());
         tag = tagRepository.save(tag);
@@ -54,7 +55,7 @@ public class TagServiceImpl implements TagService {
     @Override
     public void deleteTag(Long id) {
         if (!tagRepository.existsById(id)) {
-            throw new RuntimeException("Tag not found");
+            throw new RuntimeException(ErrorMessages.TAG_NOT_FOUND);
         }
         tagRepository.deleteById(id);
     }
