@@ -7,9 +7,8 @@ import org.example.modul223backend.Image.ImageRepository;
 import org.example.modul223backend.Role.Role;
 import org.example.modul223backend.Role.RoleConstants;
 import org.example.modul223backend.Role.RoleRepository;
-import org.example.modul223backend.User.DTO.LoginRequestDTO;
-import org.example.modul223backend.User.DTO.UserCreateDTO;
-import org.example.modul223backend.User.DTO.UserDTO;
+import org.example.modul223backend.User.DTO.*;
+import org.example.modul223backend.exception.ErrorMessages;
 import org.example.modul223backend.exception.RoleException.RoleNotFoundException;
 import org.example.modul223backend.exception.UserException.DuplicateUserException;
 import org.example.modul223backend.exception.UserException.UnauthorizedActionException;
@@ -17,6 +16,7 @@ import org.example.modul223backend.exception.UserException.UserException;
 import org.example.modul223backend.exception.UserException.UserNotFoundException;
 import org.example.modul223backend.util.JwtUtil;
 import org.example.modul223backend.util.Mapper;
+import org.example.modul223backend.util.UserUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -24,10 +24,9 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-
-import static com.fasterxml.jackson.databind.type.LogicalType.Map;
 
 @Service
 public class UserServiceImpl implements UserService {
@@ -59,7 +58,7 @@ public class UserServiceImpl implements UserService {
             throw new DuplicateUserException("Username already taken.");
         }
         if (userRepository.existsByEmail(userCreateDTO.getEmail())) {
-            throw new DuplicateUserException("Email already registered.");
+            throw new DuplicateUserException(ErrorMessages.DUPLICATE_EMAIL);
         }
 
         Set<Role> roles = getRolesFromNames(Set.of(RoleConstants.USER));
@@ -77,29 +76,30 @@ public class UserServiceImpl implements UserService {
     @Override
     public UserDTO getUserById(Long id) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundException("User not found."));
+                .orElseThrow(() -> new UserNotFoundException(ErrorMessages.USER_NOT_FOUND));
         return Mapper.mapToDTO(user);
     }
 
     @Override
     public List<UserDTO> getAllUsers() {
         List<User> users = userRepository.findAll();
-        return users.stream().map(Mapper::mapToDTO).collect(Collectors.toList());
+        return users.stream().map(Mapper::mapToDTO).toList();
     }
 
+    @Transactional
     @Override
     public UserDTO updateUser(Long id, UserDTO userDTO) {
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundException("User not found."));
+                .orElseThrow(() -> new UserNotFoundException(ErrorMessages.USER_NOT_FOUND));
 
         // Allow updates only by the user themselves or an admin
         String currentUsername = SecurityContextHolder.getContext().getAuthentication().getName();
         User currentUser = userRepository.findByUsername(currentUsername)
                 .orElseThrow(() -> new UserNotFoundException("Current user not found."));
 
-        boolean isAdmin = currentUser.getRoles().stream()
-                .anyMatch(role -> role.getRoleName().equals(RoleConstants.ADMIN));
+        boolean isAdmin = UserUtils.hasRole(currentUser, RoleConstants.ADMIN);
 
+        // only a admin or the current user can delete the account
         if (!isAdmin && !currentUser.getId().equals(id)) {
             throw new UnauthorizedActionException("You are not authorized to update this user.");
         }
@@ -124,10 +124,9 @@ public class UserServiceImpl implements UserService {
         User currentUser = userRepository.findByUsernameAndDeletedFalse(currentUsername)
                 .orElseThrow(() -> new UserNotFoundException("Current user not found."));
         User userToDelete = userRepository.findActiveById(id)
-                .orElseThrow(() -> new UserNotFoundException("User not found."));
+                .orElseThrow(() -> new UserNotFoundException(ErrorMessages.USER_NOT_FOUND));
 
-        boolean isAdmin = currentUser.getRoles().stream()
-                .anyMatch(role -> role.getRoleName().equals(RoleConstants.ADMIN));
+        boolean isAdmin = UserUtils.hasRole(currentUser, RoleConstants.ADMIN);
 
         if (!isAdmin && !currentUser.getId().equals(id)) {
             throw new UnauthorizedActionException("Only admins can delete other users' accounts.");
@@ -164,8 +163,64 @@ public class UserServiceImpl implements UserService {
         Set<String> roles = user.getRoles().stream()
                 .map(Role::getRoleName)
                 .collect(Collectors.toSet());
-        return jwtUtil.generateToken(user.getUsername(), roles);
+        return jwtUtil.generateToken(user.getUsername(),user.getId(), roles);
     }
+
+    @Transactional
+    @Override
+    public UserDTO updateUserSetting(UserUpdateDTO updateDTO) {
+        String currentUsername = SecurityContextHolder.getContext().getAuthentication().getName();
+        User user = userRepository.findByUsernameAndDeletedFalse(currentUsername)
+                .orElseThrow(() -> new UserNotFoundException(ErrorMessages.USER_NOT_FOUND));
+
+        if (updateDTO.getUsername() != null) {
+            user.setUsername(updateDTO.getUsername());
+        }
+        if (updateDTO.getEmail() != null) {
+            if (userRepository.existsByEmail(updateDTO.getEmail())) {
+                throw new DuplicateUserException(ErrorMessages.DUPLICATE_EMAIL);
+            }
+            user.setEmail(updateDTO.getEmail());
+        }
+        if (updateDTO.getPassword() != null) {
+            user.setPasswordHash(passwordEncoder.encode(updateDTO.getPassword()));
+        }
+
+        user = userRepository.save(user);
+        return Mapper.mapToDTO(user);
+    }
+
+    @Transactional
+    @Override
+    public UserDTO adminUpdateUser(Long id, UserAdminUpdateDTO updateDTO) {
+
+        User user = userRepository.findActiveById(id)
+                .orElseThrow(() -> new UserNotFoundException(ErrorMessages.USER_NOT_FOUND));
+
+        if (updateDTO.getUsername() != null) {
+            user.setUsername(updateDTO.getUsername());
+        }
+
+        if (updateDTO.getEmail() != null) {
+            if (userRepository.existsByEmail(updateDTO.getEmail())) {
+                throw new DuplicateUserException(ErrorMessages.DUPLICATE_EMAIL);
+            }
+            user.setEmail(updateDTO.getEmail());
+        }
+
+        if (updateDTO.getPassword() != null) {
+            user.setPasswordHash(passwordEncoder.encode(updateDTO.getPassword()));
+        }
+
+        if (updateDTO.getRoles() != null) {
+            Set<Role> roles = getRolesFromNames(updateDTO.getRoles());
+            user.setRoles(roles);
+        }
+
+        user = userRepository.save(user);
+        return Mapper.mapToDTO(user);
+    }
+
 
     private Set<Role> getRolesFromNames(Set<String> roleNames) {
         return roleNames.stream()
@@ -174,11 +229,70 @@ public class UserServiceImpl implements UserService {
                 .collect(Collectors.toSet());
     }
 
-    private boolean isAdminOrOwner(User currentUser, User targetUser) {
+    @Transactional
+    public void reactivateUser(Long id) {
+        User user = userRepository.findById(id).orElseThrow(() -> new UserException("Could not find user with id = " + id, HttpStatus.BAD_REQUEST));
+        user.setDeleted(false);
+        userRepository.save(user);
+    }
+
+    @Transactional
+    @Override
+    public void changePassword(Long id, PasswordChangeDTO passwordChangeDTO) {
+        String currentUsername = SecurityContextHolder.getContext().getAuthentication().getName();
+        User currentUser = userRepository.findByUsernameAndDeletedFalse(currentUsername)
+                .orElseThrow(() -> new UserNotFoundException("Current user not found."));
+        User userToUpdate = userRepository.findActiveById(id)
+                .orElseThrow(() -> new UserNotFoundException(ErrorMessages.USER_NOT_FOUND));
+
+        // Only allow the user themselves or an admin to update the password
         boolean isAdmin = currentUser.getRoles().stream()
                 .anyMatch(role -> role.getRoleName().equals(RoleConstants.ADMIN));
-        return isAdmin || currentUser.getId().equals(targetUser.getId());
+        if (!isAdmin && !currentUser.getId().equals(id)) {
+            throw new UnauthorizedActionException("You are not authorized to change this password.");
+        }
+
+        // Verify old password if the user is updating their own password
+        if (!isAdmin && !passwordEncoder.matches(passwordChangeDTO.getOldPassword(), userToUpdate.getPasswordHash())) {
+            throw new UserException("Incorrect current password.", HttpStatus.BAD_REQUEST);
+        }
+
+        // Update the password
+        userToUpdate.setPasswordHash(passwordEncoder.encode(passwordChangeDTO.getNewPassword()));
+        userRepository.save(userToUpdate);
     }
+
+    @Override
+    public List<UserDTO> searchUsers(String username, String email, String role) {
+        List<User> users = userRepository.searchUsers(username, email, role);
+        return users.stream()
+                .map(Mapper::mapToDTO)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public UserDTO getCurrentUser() {
+        String currentUsername = SecurityContextHolder.getContext().getAuthentication().getName();
+        User currentUser = userRepository.findByUsernameAndDeletedFalse(currentUsername)
+                .orElseThrow(() -> new UserNotFoundException(ErrorMessages.USER_NOT_FOUND));
+        return Mapper.mapToDTO(currentUser);
+    }
+
+    @Override
+    public void changePasswordAdmin(Long id, String password) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new UserNotFoundException("User not found with ID: " + id));
+
+        // Encrypt the password
+        String encodedPassword = passwordEncoder.encode(password);
+
+        // Update the user's password
+        user.setPasswordHash(encodedPassword);
+
+        userRepository.save(user);
+
+    }
+
 
 }
 
